--- a/main_service/static/create_ticket.html
+++ b/main_service/static/create_ticket.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container">
-<h2>Создание шаблона билета</h2>
+    <h2>Создание шаблона билета</h2>
     <form id="ticketForm">
         <input type="hidden" id="eventId">
         <label>Цена: <input type="number" id="price" required></label><br>
@@ -22,19 +22,34 @@
         <label>Количество рядов: <input type="number" id="rows"></label><br>
         <label>Мест в ряду: <input type="number" id="seats"></label><br>
         <label>Мест всего: <input type="number" id="totalSeats"></label><br>
-        <label>Дата мероприятия: <input type="date" id="eventDate" disabled></label><br> <!-- Дата будет автозаполняться -->
+        <label>Дата и время мероприятия: <input type="datetime-local" id="eventDateTime" disabled></label><br> <!-- Дата и время будет автозаполняться -->
         <button type="submit">Создать билет</button>
     </form>
 </div>
+
 <script>
     const urlParams = new URLSearchParams(window.location.search);
     const eventId = urlParams.get('eventId');
-    const eventDate = urlParams.get('eventDate');
+    const eventDateTime = urlParams.get('eventDateTime'); // Дата + время в формате ISO 8601
 
-    const formattedEventDate = eventDate ? eventDate.split('T')[0] : '';
+    if (eventId) {
+        document.getElementById('eventId').value = eventId;
+    }
 
-    document.getElementById('eventId').value = eventId;
-    document.getElementById('eventDate').value = formattedEventDate;
+    if (eventDateTime) {
+        const dateObj = new Date(eventDateTime);
+
+        if (!isNaN(dateObj.getTime())) {
+            // Приводим к локальному формату без смещения
+            const localDateTime = new Date(dateObj.getTime() - dateObj.getTimezoneOffset() * 60000)
+                .toISOString()
+                .slice(0, 16);
+
+            document.getElementById('eventDateTime').value = localDateTime;
+        } else {
+            console.error("Некорректная дата:", eventDateTime);
+        }
+    }
 
     document.getElementById('ticketForm').addEventListener('submit', function(event) {
         event.preventDefault();
