--- a/main_service/static/create_order.html
+++ b/main_service/static/create_order.html
@@ -47,6 +47,13 @@
     document.getElementById('orderForm').addEventListener('submit', function(event) {
         event.preventDefault();
 
+        const token = localStorage.getItem('token');
+        if (!token) {
+            alert('Вы не авторизованы! Перенаправляем на страницу входа.');
+            window.location.href = 'login.html';
+            return;
+        }
+
         const eventId = document.getElementById('eventId').value;
         const zone = document.getElementById('zone').value || null;
         const row = document.getElementById('row').value ? parseInt(document.getElementById('row').value, 10) : null;
@@ -57,7 +64,10 @@
 
         fetch(`/events/${eventId}/tickets/order`, {
             method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
+            headers: {
+                'Content-Type': 'application/json',
+                'Authorization': 'Bearer ' + token
+            },
             body: JSON.stringify(orderData)
         })
             .then(response => {
