--- a/main_service/static/create_order.html
+++ b/main_service/static/create_order.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Бронирование билета</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
+        body { font-family: Consolas, sans-serif; margin: 20px; }
         .hidden { display: none; }
-        .container { max-width: 400px; margin: auto; }
+        .container { max-width: 400px; margin: auto; gap: 20px; }
         .zone { margin-top: 20px; padding: 10px; border: 1px solid #ccc; }
         .row { margin-left: 10px; }
         .seat { display: inline-block; padding: 5px; margin: 2px; border: 1px solid black; cursor: pointer; }
