--- a/main_service/static/create_ticket.html
+++ b/main_service/static/create_ticket.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Создать билет</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
+        body { font-family: Consolas, sans-serif; margin: 20px; }
         .hidden { display: none; }
-        .container { max-width: 400px; margin: auto; }
+        .container { max-width: 400px; margin: auto; gap: 20px;}
     </style>
 </head>
 <body>
@@ -17,6 +17,7 @@
         <input type="hidden" id="eventId">
         <label>Цена: <input type="number" id="price" required></label><br>
         <label>Зоны: <input type="text" id="zone"></label><br>
+        <label>Название мероприятия: <input type="text" id="title"></label><br>
         <label>Место проведения: <input type="text" id="location"></label><br>
         <label>Количество рядов: <input type="number" id="rows"></label><br>
         <label>Мест в ряду: <input type="number" id="seats"></label><br>
