--- a/main_service/static/index.html
+++ b/main_service/static/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мероприятия и билеты</title>
     <style>
-        body { font-family: Arial, sans-serif; }
+        body { font-family: Consolas, sans-serif; }
         .event { margin-bottom: 20px; }
         .hidden { display: none; }
-        .container { max-width: 400px; margin: auto; }
+        .container { max-width: 400px; margin: auto; padding: 20px; gap: 20px; }
     </style>
 </head>
 <body>
