--- a/main_service/static/register.html
+++ b/main_service/static/register.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Регистрация</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        .container { max-width: 400px; margin: auto; }
+        body { font-family: Consolas, sans-serif; margin: 20px; }
+        .container { max-width: 400px; margin: auto; padding: 20px; gap: 20px;}
     </style>
 </head>
 <body>
